// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HorizontalStack renders default HorizontalStack correctly 1`] = `
<div
  className=
      ms-HorizontalStack
      {
        box-sizing: border-box;
        display: flex;
        flex-direction: row;
        flex-wrap: nowrap;
        height: auto;
        width: auto;
      }
      & > * {
        margin-right: 0px;
        text-overflow: ellipsis;
        white-space: nowrap;
      }
      & > *:last-child {
        margin-right: 0px;
      }
      & > *:not(.ms-StackItem) {
        flex-shrink: 0;
      }
>
  <div>
    Item 1
  </div>
  <div>
    Item 2
  </div>
</div>
`;

exports[`HorizontalStack renders gap correctly 1`] = `
<div
  className=
      ms-HorizontalStack
      {
        box-sizing: border-box;
        display: flex;
        flex-direction: row;
        flex-wrap: nowrap;
        height: auto;
        width: auto;
      }
      & > * {
        margin-right: 5px;
        text-overflow: ellipsis;
        white-space: nowrap;
      }
      & > *:last-child {
        margin-right: 0px;
      }
      & > *:not(.ms-StackItem) {
        flex-shrink: 0;
      }
>
  <div>
    Item 1
  </div>
  <div>
    Item 2
  </div>
</div>
`;

exports[`HorizontalStack renders growing items correctly 1`] = `
<div
  className=
      ms-HorizontalStack
      {
        box-sizing: border-box;
        display: flex;
        flex-direction: row;
        flex-wrap: nowrap;
        height: auto;
        width: auto;
      }
      & > * {
        margin-right: 0px;
        text-overflow: ellipsis;
        white-space: nowrap;
      }
      & > *:last-child {
        margin-right: 0px;
      }
      & > *:not(.ms-StackItem) {
        flex-shrink: 0;
      }
>
  <span
    className=
        ms-StackItem
        {
          flex-shrink: 0;
        }
  >
    Item 1
  </span>
  <span
    className=
        ms-StackItem
        {
          flex-shrink: 0;
        }
  >
    Item 2
  </span>
</div>
`;

exports[`HorizontalStack renders item alignments correctly 1`] = `
<div
  className=
      ms-HorizontalStack
      {
        box-sizing: border-box;
        display: flex;
        flex-direction: row;
        flex-wrap: nowrap;
        height: auto;
        width: auto;
      }
      & > * {
        margin-right: 0px;
        text-overflow: ellipsis;
        white-space: nowrap;
      }
      & > *:last-child {
        margin-right: 0px;
      }
      & > *:not(.ms-StackItem) {
        flex-shrink: 0;
      }
>
  <span
    className=
        ms-StackItem
        {
          align-self: auto;
          flex-shrink: 0;
        }
  >
    Auto
  </span>
  <span
    className=
        ms-StackItem
        {
          align-self: stretch;
          flex-shrink: 0;
        }
  >
    Stretch
  </span>
  <span
    className=
        ms-StackItem
        {
          align-self: baseline;
          flex-shrink: 0;
        }
  >
    Baseline
  </span>
  <span
    className=
        ms-StackItem
        {
          align-self: flex-start;
          flex-shrink: 0;
        }
  >
    Start
  </span>
  <span
    className=
        ms-StackItem
        {
          align-self: center;
          flex-shrink: 0;
        }
  >
    Center
  </span>
  <span
    className=
        ms-StackItem
        {
          align-self: flex-end;
          flex-shrink: 0;
        }
  >
    End
  </span>
</div>
`;

exports[`HorizontalStack renders shrinking items correctly 1`] = `
<div
  className=
      ms-HorizontalStack
      {
        box-sizing: border-box;
        display: flex;
        flex-direction: row;
        flex-wrap: nowrap;
        height: auto;
        width: auto;
      }
      & > * {
        margin-right: 0px;
        text-overflow: ellipsis;
        white-space: nowrap;
      }
      & > *:last-child {
        margin-right: 0px;
      }
      & > *:not(.ms-StackItem) {
        flex-shrink: 1;
      }
>
  <span
    className=
        ms-StackItem
        {
          flex-shrink: 1;
        }
  >
    Item 1
  </span>
  <span
    className=
        ms-StackItem
        {
          flex-shrink: 0;
        }
  >
    Item 2
  </span>
</div>
`;
